--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -15,93 +15,39 @@
         &(&1 == @socket.view)
       ),
     href: ~p"/hosts/#{@host_handle}/events"
+  },
+  %{
+    label: "Settings",
+    icon: "hero-cog-6-tooth",
+    current: Enum.any?([GitsWeb.HostLive.Settings], &(&1 == @socket.view)),
+    href: ~p"/hosts/#{@host_handle}/dashboard"
   }
 ] %>
 
-<aside
-  :if={false}
-  id="sidebar"
-  class="fixed inset-0 z-10 hidden h-dvh flex-col gap-6 bg-white p-2 lg:static lg:mx-auto lg:flex lg:h-auto lg:max-w-screen-xl lg:flex-row lg:items-center lg:gap-12 lg:p-0"
->
-  <div class="inline-flex items-center justify-between">
-    <.logo />
-    <button
-      class="inline-flex size-9 items-center justify-center lg:hidden"
-      phx-click={JS.hide(to: "#sidebar")}
-    >
-      <.icon name="hero-x-mark" />
-    </button>
-  </div>
-  <nav class="flex grow flex-col gap-2 lg:flex-row lg:items-center lg:gap-0.5">
-    <.link
-      :for={i <- navigation_items}
-      navigate={i.href}
-      replace={true}
-      class={[
-        "rounded-lg p-4 gap-4 inline-flex font-semibold lg:py-2 text-zinc-950",
-        if(i.current,
-          do: "bg-black/5",
-          else: "hover:bg-black/5"
-        )
-      ]}
-    >
-      <.icon name={i.icon} class="shrink-0 lg:hidden" />
-      <span class="text-sm font-medium"><%= i.label %></span>
-    </.link>
-  </nav>
-  <div class="grid gap-4 lg:flex">
-    <div class="inline-flex items-center gap-3 self-start p-4 lg:hidden lg:size-9 lg:p-0">
-      <.icon name="hero-lifebuoy" />
-      <span class="text-sm">Support</span>
-    </div>
-
-    <div class="inline-flex items-center gap-3 self-start p-4 lg:hidden lg:size-9 lg:p-0">
-      <.icon name="hero-cog-6-tooth" />
-      <span class="text-sm">Settings</span>
-    </div>
-    <div class="p-1">
-      <div class="flex items-center gap-4 rounded-xl border p-4 lg:w-64 lg:px-2 lg:py-1">
-        <%= if assigns[:host_logo] do %>
-          <img
-            src={Gits.Bucket.get_image_url(@host_logo)}
-            alt="Profile image"
-            class="size-9 rounded-full object-cover"
-          />
-        <% else %>
-          <img
-            src={static_path(GitsWeb.Endpoint, ~p"/images/placeholder.png")}
-            alt="Profile image"
-            class="size-9 rounded-full object-cover"
-          />
-        <% end %>
-        <div class="grid grow *:text-sm *:leading-tight lg:*:text-xs">
-          <span class="font-medium">
-            <%= @current_user.display_name || @current_user.email %>
-          </span>
-          <span class="text-zinc-500"><%= assigns[:host_name] %></span>
-        </div>
-        <.icon name="hero-chevron-up-down-mini" class="text-zinc-500" />
-      </div>
-    </div>
-  </div>
-</aside>
 <div class="flex min-h-dvh w-full gap-8">
-  <aside class="fixed inset-0 z-10 flex w-full flex-col gap-8 bg-white lg:static lg:max-w-56">
-    <div>
-      <div>
-        <.logo />
-      </div>
+  <aside
+    class="fixed hidden inset-0 z-10 lg:flex w-full flex-col gap-6 bg-white lg:static lg:max-w-64"
+    id="sidebar"
+  >
+    <div class="flex justify-between items-start p-2">
+      <.logo />
+      <button class="size-9 rounded-lg lg:hidden" phx-click={JS.hide(to: "aside#sidebar")}>
+        <.icon name="hero-x-mark" />
+      </button>
     </div>
-    <nav class="flex w-full grow flex-col gap-2">
+    <nav
+      :for={items <- [navigation_items |> Enum.take(2), navigation_items |> Enum.take(-1)]}
+      class="flex w-full first-of-type:grow flex-col gap-2"
+    >
       <.link
-        :for={i <- navigation_items}
+        :for={i <- items}
         navigate={i.href}
         replace={true}
         class={[
-          "px-2 gap-4 inline-flex group text-zinc-500",
+          "px-2 gap-4 inline-flex group text-zinc-500 border-l-2",
           if(i.current,
-            do: "is-active border-l-2 border-zinc-500",
-            else: ""
+            do: "is-active border-zinc-500",
+            else: "border-transparent"
           )
         ]}
       >
@@ -111,21 +57,25 @@
         </div>
       </.link>
     </nav>
-    <div class="grid">
-      <div class="inline-flex gap-2 border-l-2 border-zinc-500 px-2">
-        <div class="inline-flex grow items-center gap-2 rounded-lg bg-zinc-50 px-2 py-4 hover:bg-zinc-100 lg:p-2">
-          <.icon name="hero-cog-6-tooth" class="size-5" />
-          <span>Settings</span>
-        </div>
-      </div>
-    </div>
     <div class="p-4 lg:p-2">
-      <div class="rounded-lg border p-4 lg:border-0 lg:p-2">
+      <div class="rounded-lg border items-center gap-2 p-2 flex">
         <div class="size-9 rounded-full bg-zinc-200"></div>
+        <div class="grow grid text-sm font-medium">
+          <span>John Doe</span>
+          <span class="text-zinc-500">Treehouse Inc</span>
+        </div>
+        <.icon name="hero-chevron-up-down-mini" class="shrink-0 text-zinc-500" />
       </div>
     </div>
   </aside>
-  <main class="mx-auto max-w-screen-xl grow space-y-4 px-2 pt-8">
+  <main class="mx-auto max-w-screen-xl grow space-y-4 lg:pt-8">
+    <div class="flex lg:hidden justify-between items-start p-2">
+      <.logo />
+      <button class="size-9 rounded-lg" phx-click={JS.show(to: "aside#sidebar", display: "flex")}>
+        <.icon name="hero-bars-3" />
+      </button>
+    </div>
+
     <%= @inner_content %>
   </main>
 </div>
