--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -26,7 +26,7 @@
 
 <div class="flex min-h-dvh w-full gap-8">
   <aside
-    class="fixed hiddenx flex inset-0 z-10 lg:flex w-full flex-col gap-6 bg-white lg:static lg:max-w-64"
+    class="fixed hidden inset-0 z-10 lg:flex w-full flex-col gap-6 bg-white lg:static lg:max-w-64"
     id="sidebar"
   >
     <div class="flex justify-between items-start p-2">
@@ -84,7 +84,7 @@
       </div>
     </div>
   </aside>
-  <main class="mx-auto max-w-screen-xl grow space-y-4 lg:pt-8">
+  <main class="mx-auto max-w-screen-xl grow flex flex-col gap-4">
     <div class="flex lg:hidden justify-between items-start p-2">
       <.logo />
       <button class="size-9 rounded-lg" phx-click={JS.show(to: "aside#sidebar", display: "flex")}>
