redo the auth form

--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -84,7 +84,7 @@
       </div>
     </div>
   </aside>
-  <main class="mx-auto max-w-screen-xl grow flex flex-col gap-4">
+  <main class="mx-auto max-w-screen-xl grow flex flex-col gap-4 w-full">
     <div class="flex lg:hidden justify-between items-start p-2">
       <.logo />
       <button class="size-9 rounded-lg" phx-click={JS.show(to: "aside#sidebar", display: "flex")}>
