--- a/lib/gits_web/controllers/auth_html/sign_in.html.heex
+++ b/lib/gits_web/controllers/auth_html/sign_in.html.heex
@@ -1,26 +1,6 @@
-<div class="grid w-full max-w-sm gap-4">
-  <p class="my-4">
-    <.link navigate="/" class="text-xl inline-block font-black italic">
-      <img src="/images/gits_logo.png" alt="GiTS" class="h-auto w-12" />
-    </.link>
-  </p>
-  <h1 class="text-3xl font-medium">Welcome back</h1>
-  <.form :let={f} for={@form} class="grid" action={~p"/request-magic-link"} method="post">
-    <label class="grid gap-1 text-sm">
-      <span>Email</span>
-      <input
-        type="text"
-        name={f[:email].name}
-        value={f[:email].value}
-        class="rounded-lg px-4 py-3 text-sm"
-      />
-    </label>
-    <Turnstile.widget data-appearance="interaction-only" class="mt-4" />
-    <button
-      type="submit"
-      class="mt-4 rounded-lg bg-zinc-900 px-4 py-3 text-sm font-medium text-zinc-50"
-    >
-      Send me a magic link
-    </button>
-  </.form>
+<div class="flex py-40 px-4 gap-20">
+  <div class="max-w-96 w-full">
+    <%= live_render(@conn, GitsWeb.AuthLive) %>
+  </div>
+  <div class="hidden lg:flex grow"></div>
 </div>
