some stylistic changes to wizard

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,9 @@
 @import url("../node_modules/quill/dist/quill.snow.css");
 
+.ql-editor {
+  font-family: theme(fontFamily.poppins)
+}
+
 @font-face {
   font-family: "Inter";
   src: url("/fonts/Inter_var.ttf") format("truetype-variations");
