--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -4,7 +4,7 @@
     </div>
   </div>
 
-  <div class="bg-white p-2 lg:sticky lg:top-24">
+  <div class="bg-white p-2 lg:stickyx lg:top-24">
     <div class="grid gap-4">
       <div class="flex items-center gap-4">
         <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
@@ -17,7 +17,7 @@
         </div>
       </div>
 
-      <h1 class="text-2xl font-semibold">The Ultimate Cheese Festival</h1>
+      <h1 class="text-2xl font-semibold"><%= @event_name %></h1>
       <div class="space-y-2">
         <div class="text-lg font-medium">
           <span>R 50.00</span>
