--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,4 +1,5 @@
-<div class="grid gap-8 p-4 py-28">
+<.header />
+<div class="grid gap-8 p-4 py-28 mx-auto max-w-screen-xl">
   <div>
     <div class="bg-zinc-500/5 relative inline-flex rounded-3xl border border-zinc-200 p-8">
       <div class="bg-zinc-500/5 absolute -top-4 left-36 h-12 w-40 rounded-xl border border-zinc-200">
@@ -29,3 +30,4 @@
     </.link>
   </div>
 </div>
+<.footer />
