add header and footer to host page

--- a/lib/gits_web/controllers/page_html/host.html.heex
+++ b/lib/gits_web/controllers/page_html/host.html.heex
@@ -1,4 +1,5 @@
-<div class="grid w-full gap-16 p-4 pt-20">
+<.header />
+<div class="grid w-full gap-28 px-2 py-20 mx-auto max-w-screen-xl">
   <div class="grid gap-4">
     <h1 class="w-full grow text-5xl font-bold lg:text-6xl">Host with us</h1>
     <h2 class="w-full max-w-md text-lg text-zinc-600">
@@ -53,3 +54,4 @@
     </div>
   </div>
 </div>
+<.footer />
