--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,4 +1,4 @@
-<.header />
+<.header test={true} />
 <div class="grid gap-8 p-4 py-28 mx-auto max-w-screen-xl">
   <div>
     <div class="bg-zinc-500/5 relative inline-flex rounded-3xl border border-zinc-200 p-8">
