header and footer to auth

--- a/lib/gits_web/controllers/auth_html/sign_in.html.heex
+++ b/lib/gits_web/controllers/auth_html/sign_in.html.heex
@@ -1,6 +1,8 @@
+<.header />
 <div class="flex py-40 px-4 gap-20">
   <div class="max-w-96 w-full">
     <%= live_render(@conn, GitsWeb.AuthLive) %>
   </div>
   <div class="hidden lg:flex grow"></div>
 </div>
+<.footer />
