--- a/lib/gits_web/controllers/auth_html/sign_in.html.heex
+++ b/lib/gits_web/controllers/auth_html/sign_in.html.heex
@@ -1,5 +1,5 @@
-<.header />
-<div class="flex py-40 px-4 gap-20">
+<.header current_path={@conn.request_path} />
+<div class="flex py-40 px-2 gap-20 mx-auto max-w-screen-xl">
   <div class="max-w-96 w-full">
     <%= live_render(@conn, GitsWeb.AuthLive) %>
   </div>
