--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -1,10 +1,11 @@
-<div class="grid gap-4 lg:grid-cols-[minmax(auto,48rem)_auto] lg:gap-x-12 lg:pt-10">
+<.header signed_in={not is_nil(@current_user)} />
+<div class="mx-auto grid max-w-screen-xl gap-4 lg:grid-cols-[minmax(auto,48rem)_auto] lg:gap-x-12 lg:py-10">
   <div class="grid w-full max-w-3xl gap-4 p-2">
     <div class="bg-zinc-200x aspect-[3/2] w-full rounded-xl bg-zinc-200 sm:mx-auto sm:max-w-lg lg:max-w-full">
     </div>
   </div>
 
-  <div class="bg-white p-2 lg:stickyx lg:top-24">
+  <div class="lg:sticky bg-white p-2 lg:top-20">
     <div class="grid gap-4">
       <div class="flex items-center gap-4">
         <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
@@ -92,3 +93,4 @@
     </div>
   </div>
 </div>
+<.footer />
